Added Glow to the Progress rings

--- a/MarketCountdownApp/MainWindow.xaml
+++ b/MarketCountdownApp/MainWindow.xaml
@@ -312,19 +312,46 @@
                   VerticalAlignment="Center">
                             <Ellipse Stroke="LightGray"
                                      StrokeThickness="6"/>
-                            <Path
-                                Stroke="{Binding LondonStatus, Converter={StaticResource StatusToBrushConverter}}"
-                                StrokeThickness="6"
-                                Data="{Binding LondonProgress, Converter={StaticResource ProgressToArcConverter}}">
-                                <Path.Effect>
-                                    <DropShadowEffect
-                                        ShadowDepth="2"
-                                        BlurRadius="15"
-                                        Opacity="1.0"
-                                        Color="{Binding Stroke.(SolidColorBrush.Color),
-              RelativeSource={RelativeSource Self}}"/>
-                                </Path.Effect>
-                            </Path>
+                            <Canvas>
+                                <!-- 1) Outer, very soft halo -->
+                                <Path
+                                    Data="{Binding LondonProgress, Converter={StaticResource ProgressToArcConverter}}"
+                                    Stroke="{Binding LondonStatus, Converter={StaticResource StatusToBrushConverter}}"
+                                    StrokeThickness="18"
+                                    StrokeStartLineCap="Round"
+                                    StrokeEndLineCap="Round"
+                                    StrokeLineJoin="Round"
+                                    Opacity="0.4">
+                                    <Path.Effect>
+                                        <BlurEffect Radius="20"/>
+                                    </Path.Effect>
+                                </Path>
+
+                                <!-- 2) Inner, stronger glow -->
+                                <Path
+                                    Data="{Binding LondonProgress, Converter={StaticResource ProgressToArcConverter}}"
+                                    Stroke="{Binding LondonStatus, Converter={StaticResource StatusToBrushConverter}}"
+                                    StrokeThickness="14"
+                                    StrokeStartLineCap="Round"
+                                    StrokeEndLineCap="Round"
+                                    StrokeLineJoin="Round"
+                                    Opacity="0.7">
+                                    <Path.Effect>
+                                        <BlurEffect Radius="10"/>
+                                    </Path.Effect>
+                                </Path>
+
+                                <!-- 3) Crisp foreground ring -->
+                                <Path
+                                    Data="{Binding LondonProgress, Converter={StaticResource ProgressToArcConverter}}"
+                                    Stroke="{Binding LondonStatus, Converter={StaticResource StatusToBrushConverter}}"
+                                    StrokeThickness="6"
+                                    StrokeStartLineCap="Round"
+                                    StrokeEndLineCap="Round"
+                                    StrokeLineJoin="Round"/>
+                            </Canvas>
+
+
                             <TextBlock Text="{Binding LondonStatus}"
                          FontSize="10"
                          FontWeight="Bold"
@@ -423,19 +450,44 @@
    VerticalAlignment="Center">
                             <Ellipse Stroke="LightGray"
                                      StrokeThickness="6"/>
-                            <Path
-                                Stroke="{Binding NewYorkStatus, Converter={StaticResource StatusToBrushConverter}}"
-                                StrokeThickness="6"
-                                Data="{Binding NewYorkProgress, Converter={StaticResource ProgressToArcConverter}}">
-                                <Path.Effect>
-                                    <DropShadowEffect
-                                        ShadowDepth="2"
-                                        BlurRadius="15"
-                                        Opacity="1.0"
-                                        Color="{Binding Stroke.(SolidColorBrush.Color),
-RelativeSource={RelativeSource Self}}"/>
-                                </Path.Effect>
-                            </Path>
+                            <Canvas>
+                                <!-- 1) Outer, very soft halo -->
+                                <Path
+                                    Data="{Binding LondonProgress, Converter={StaticResource ProgressToArcConverter}}"
+                                    Stroke="{Binding LondonStatus, Converter={StaticResource StatusToBrushConverter}}"
+                                    StrokeThickness="18"
+                                    StrokeStartLineCap="Round"
+                                    StrokeEndLineCap="Round"
+                                    StrokeLineJoin="Round"
+                                    Opacity="0.4">
+                                    <Path.Effect>
+                                        <BlurEffect Radius="20"/>
+                                    </Path.Effect>
+                                </Path>
+
+                                <!-- 2) Inner, stronger glow -->
+                                <Path
+                                    Data="{Binding NewYorkProgress, Converter={StaticResource ProgressToArcConverter}}"
+                                    Stroke="{Binding NewYorkStatus, Converter={StaticResource StatusToBrushConverter}}"
+                                    StrokeThickness="14"
+                                    StrokeStartLineCap="Round"
+                                    StrokeEndLineCap="Round"
+                                    StrokeLineJoin="Round"
+                                    Opacity="0.7">
+                                    <Path.Effect>
+                                        <BlurEffect Radius="10"/>
+                                    </Path.Effect>
+                                </Path>
+
+                                <!-- 3) Crisp foreground ring -->
+                                <Path
+                                    Data="{Binding NewYorkProgress, Converter={StaticResource ProgressToArcConverter}}"
+                                    Stroke="{Binding NewYorkStatus, Converter={StaticResource StatusToBrushConverter}}"
+                                    StrokeThickness="6"
+                                    StrokeStartLineCap="Round"
+                                    StrokeEndLineCap="Round"
+                                    StrokeLineJoin="Round"/>
+                            </Canvas>
                             <TextBlock Text="{Binding NewYorkStatus}"
           FontSize="10"
           FontWeight="Bold"
@@ -531,19 +583,44 @@ RelativeSource={RelativeSource Self}}"/>
    VerticalAlignment="Center">
                             <Ellipse Stroke="LightGray"
                                      StrokeThickness="6"/>
-                            <Path
-                                Stroke="{Binding SydneyStatus, Converter={StaticResource StatusToBrushConverter}}"
-                                StrokeThickness="6"
-                                Data="{Binding SydneyProgress, Converter={StaticResource ProgressToArcConverter}}">
-                                <Path.Effect>
-                                    <DropShadowEffect
-                                        ShadowDepth="2"
-                                        BlurRadius="15"
-                                        Opacity="1.0"
-                                        Color="{Binding Stroke.(SolidColorBrush.Color),
-RelativeSource={RelativeSource Self}}"/>
-                                </Path.Effect>
-                            </Path>
+                            <Canvas>
+                                <!-- 1) Outer, very soft halo -->
+                                <Path
+                                    Data="{Binding LondonProgress, Converter={StaticResource ProgressToArcConverter}}"
+                                    Stroke="{Binding LondonStatus, Converter={StaticResource StatusToBrushConverter}}"
+                                    StrokeThickness="18"
+                                    StrokeStartLineCap="Round"
+                                    StrokeEndLineCap="Round"
+                                    StrokeLineJoin="Round"
+                                    Opacity="0.4">
+                                    <Path.Effect>
+                                        <BlurEffect Radius="20"/>
+                                    </Path.Effect>
+                                </Path>
+
+                                <!-- 2) Inner, stronger glow -->
+                                <Path
+                                    Data="{Binding SydneyProgress, Converter={StaticResource ProgressToArcConverter}}"
+                                    Stroke="{Binding SydneyStatus, Converter={StaticResource StatusToBrushConverter}}"
+                                    StrokeThickness="14"
+                                    StrokeStartLineCap="Round"
+                                    StrokeEndLineCap="Round"
+                                    StrokeLineJoin="Round"
+                                    Opacity="0.7">
+                                    <Path.Effect>
+                                        <BlurEffect Radius="10"/>
+                                    </Path.Effect>
+                                </Path>
+
+                                <!-- 3) Crisp foreground ring -->
+                                <Path
+                                    Data="{Binding SydneyProgress, Converter={StaticResource ProgressToArcConverter}}"
+                                    Stroke="{Binding SydneyStatus, Converter={StaticResource StatusToBrushConverter}}"
+                                    StrokeThickness="6"
+                                    StrokeStartLineCap="Round"
+                                    StrokeEndLineCap="Round"
+                                    StrokeLineJoin="Round"/>
+                            </Canvas>
                             <TextBlock Text="{Binding SydneyStatus}"
           FontSize="10"
           FontWeight="Bold"
@@ -639,19 +716,44 @@ RelativeSource={RelativeSource Self}}"/>
    VerticalAlignment="Center">
                             <Ellipse Stroke="LightGray"
                                      StrokeThickness="6"/>
-                            <Path
-                                Stroke="{Binding TokyoStatus, Converter={StaticResource StatusToBrushConverter}}"
-                                StrokeThickness="6"
-                                Data="{Binding TokyoProgress, Converter={StaticResource ProgressToArcConverter}}">
-                                <Path.Effect>
-                                    <DropShadowEffect
-                                        ShadowDepth="2"
-                                        BlurRadius="15"
-                                        Opacity="1.0"
-                                        Color="{Binding Stroke.(SolidColorBrush.Color),
-RelativeSource={RelativeSource Self}}"/>
-                                </Path.Effect>
-                            </Path>
+                            <Canvas>
+                                <!-- 1) Outer, very soft halo -->
+                                <Path
+                                    Data="{Binding TokyoProgress, Converter={StaticResource ProgressToArcConverter}}"
+                                    Stroke="{Binding TokyoStatus, Converter={StaticResource StatusToBrushConverter}}"
+                                    StrokeThickness="18"
+                                    StrokeStartLineCap="Round"
+                                    StrokeEndLineCap="Round"
+                                    StrokeLineJoin="Round"
+                                    Opacity="0.4">
+                                    <Path.Effect>
+                                        <BlurEffect Radius="20"/>
+                                    </Path.Effect>
+                                </Path>
+
+                                <!-- 2) Inner, stronger glow -->
+                                <Path
+                                    Data="{Binding TokyoProgress, Converter={StaticResource ProgressToArcConverter}}"
+                                    Stroke="{Binding TokyoStatus, Converter={StaticResource StatusToBrushConverter}}"
+                                    StrokeThickness="14"
+                                    StrokeStartLineCap="Round"
+                                    StrokeEndLineCap="Round"
+                                    StrokeLineJoin="Round"
+                                    Opacity="0.7">
+                                    <Path.Effect>
+                                        <BlurEffect Radius="10"/>
+                                    </Path.Effect>
+                                </Path>
+
+                                <!-- 3) Crisp foreground ring -->
+                                <Path
+                                    Data="{Binding TokyoProgress, Converter={StaticResource ProgressToArcConverter}}"
+                                    Stroke="{Binding TokyoStatus, Converter={StaticResource StatusToBrushConverter}}"
+                                    StrokeThickness="6"
+                                    StrokeStartLineCap="Round"
+                                    StrokeEndLineCap="Round"
+                                    StrokeLineJoin="Round"/>
+                            </Canvas>
                             <TextBlock Text="{Binding TokyoStatus}"
           FontSize="10"
           FontWeight="Bold"
