--- a/MarketCountdownApp/MainWindow.xaml
+++ b/MarketCountdownApp/MainWindow.xaml
@@ -4,6 +4,8 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="clr-namespace:MarketCountdownApp"
+    xmlns:settings="clr-namespace:MarketCountdownApp.Properties;assembly=MarketCountdownApp"
+    xmlns:prop="clr-namespace:MarketCountdownApp.Properties"
     Title="Market Countdown"
     WindowStyle="None"
     ResizeMode="NoResize"
@@ -23,7 +25,8 @@
     <Window.Resources>
         <!-- Converters & ViewModel -->
         <local:StatusToBrushConverter x:Key="StatusToBrushConverter"/>
-                <local:ImpactToBrushConverter x:Key="ImpactToBrushConverter"/>
+        <local:ProgressToArcConverter x:Key="ProgressToArcConverter"/>
+        <local:ImpactToBrushConverter x:Key="ImpactToBrushConverter"/>
         <local:MainWindowViewModel      x:Key="ViewModel"/>
         <local:IconSourceConverter x:Key="IconSourceConverter"/>
         <BooleanToVisibilityConverter x:Key="BoolToVis"/>
@@ -264,14 +267,13 @@
                 <!-- London Tile -->
                 <Border Background="{DynamicResource CardBackgroundBrush}"
                 CornerRadius="12"
-                Margin="4"
-                Padding="8">
+                Margin="4">
                     <Grid>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="60"/>
-                            <ColumnDefinition Width="Auto"/>
-                            <ColumnDefinition Width="Auto"/>
-                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="50"/>
+                            <ColumnDefinition Width="60"/>
                         </Grid.ColumnDefinitions>
 
                         <!-- Icon -->
@@ -300,12 +302,11 @@
                        Text="{Binding LondonLocalTime}"
                        Style="{StaticResource LocalTimeStyle}"
                        HorizontalAlignment="Center"
-                       Margin="10,0,10,0"
+                       Margin="12,10,8,0"
                        VerticalAlignment="Top"/>
 
                         <!-- Status dial -->
                         <Grid Grid.Column="3"
-<<<<<<< HEAD
                   Width="60" Height="60"
                   Margin="-20,0,0,0"
                   VerticalAlignment="Center">
@@ -351,24 +352,12 @@
                             </Canvas>
 
 
-=======
-                              VerticalAlignment="Center"
-                              
-                              ClipToBounds="True"
-                              Margin="-20,0,8,0">
-                            <local:CircularProgressBar_UC
-                                Width="60" Height="60"
-                                Minimum="0" Maximum="1"
-                                Value="{Binding LondonProgress}"
-                                Stroke="{Binding LondonStatus, Converter={StaticResource StatusToBrushConverter}}"
-                                StrokeThickness="6"
-                                ClipToBounds="False"/>
->>>>>>> 68345e8aca7943b6e7954bcdf84b25dd1883ce00
                             <TextBlock Text="{Binding LondonStatus}"
-                                       FontSize="10" FontWeight="Bold"
-                                       Foreground="{DynamicResource PrimaryTextBrush}"
-                                       HorizontalAlignment="Center"
-                                       VerticalAlignment="Center"/>
+                         FontSize="10"
+                         FontWeight="Bold"
+                         Foreground="{DynamicResource PrimaryTextBrush}"
+                         HorizontalAlignment="Center"
+                         VerticalAlignment="Center"/>
                         </Grid>
                         <!-- glowing dot -->
                         <Grid Grid.Column="0"
@@ -454,7 +443,6 @@
         HorizontalAlignment="Center"
         Margin="12,10,8,0"
         VerticalAlignment="Top"/>
-<<<<<<< HEAD
                         <Grid Grid.Column="3"
    Width="60" Height="60"
    HorizontalAlignment="Center"
@@ -500,20 +488,12 @@
                                     StrokeEndLineCap="Round"
                                     StrokeLineJoin="Round"/>
                             </Canvas>
-=======
-                        <Grid Grid.Column="3" Width="60" Height="60" VerticalAlignment="Center">
-                            <local:CircularProgressBar_UC
-                                Width="60" Height="60"
-                                Minimum="0" Maximum="1"
-                                Value="{Binding NewYorkProgress}"
-                                Stroke="{Binding NewYorkStatus, Converter={StaticResource StatusToBrushConverter}}"
-                                StrokeThickness="6"/>
->>>>>>> 68345e8aca7943b6e7954bcdf84b25dd1883ce00
                             <TextBlock Text="{Binding NewYorkStatus}"
-                                       FontSize="10" FontWeight="Bold"
-                                       Foreground="{DynamicResource PrimaryTextBrush}"
-                                       HorizontalAlignment="Center"
-                                       VerticalAlignment="Center"/>
+          FontSize="10"
+          FontWeight="Bold"
+          Foreground="{DynamicResource PrimaryTextBrush}"
+          HorizontalAlignment="Center"
+          VerticalAlignment="Center"/>
                         </Grid>
                         <Grid Grid.Column="0"
    Width="20" Height="20"
@@ -596,7 +576,6 @@
         HorizontalAlignment="Center"
         Margin="12,10,8,0"
         VerticalAlignment="Top"/>
-<<<<<<< HEAD
                         <Grid Grid.Column="3"
    Width="60" Height="60"
    HorizontalAlignment="Center"
@@ -642,20 +621,12 @@
                                     StrokeEndLineCap="Round"
                                     StrokeLineJoin="Round"/>
                             </Canvas>
-=======
-                        <Grid Grid.Column="3" Width="60" Height="60" VerticalAlignment="Center">
-                            <local:CircularProgressBar_UC
-                                Width="60" Height="60"
-                                Minimum="0" Maximum="1"
-                                Value="{Binding SydneyProgress}"
-                                Stroke="{Binding SydneyStatus, Converter={StaticResource StatusToBrushConverter}}"
-                                StrokeThickness="6"/>
->>>>>>> 68345e8aca7943b6e7954bcdf84b25dd1883ce00
                             <TextBlock Text="{Binding SydneyStatus}"
-                                       FontSize="10" FontWeight="Bold"
-                                       Foreground="{DynamicResource PrimaryTextBrush}"
-                                       HorizontalAlignment="Center"
-                                       VerticalAlignment="Center"/>
+          FontSize="10"
+          FontWeight="Bold"
+          Foreground="{DynamicResource PrimaryTextBrush}"
+          HorizontalAlignment="Center"
+          VerticalAlignment="Center"/>
                         </Grid>
                         <Grid Grid.Column="0"
    Width="20" Height="20"
@@ -738,7 +709,6 @@
         HorizontalAlignment="Center"
         Margin="12,10,8,0"
         VerticalAlignment="Top"/>
-<<<<<<< HEAD
                         <Grid Grid.Column="3"
    Width="60" Height="60"
    HorizontalAlignment="Center"
@@ -784,20 +754,12 @@
                                     StrokeEndLineCap="Round"
                                     StrokeLineJoin="Round"/>
                             </Canvas>
-=======
-                        <Grid Grid.Column="3" Width="60" Height="60" VerticalAlignment="Center">
-                            <local:CircularProgressBar_UC
-                                Width="60" Height="60"
-                                Minimum="0" Maximum="1"
-                                Value="{Binding TokyoProgress}"
-                                Stroke="{Binding TokyoStatus, Converter={StaticResource StatusToBrushConverter}}"
-                                StrokeThickness="6"/>
->>>>>>> 68345e8aca7943b6e7954bcdf84b25dd1883ce00
                             <TextBlock Text="{Binding TokyoStatus}"
-                                       FontSize="10" FontWeight="Bold"
-                                       Foreground="{DynamicResource PrimaryTextBrush}"
-                                       HorizontalAlignment="Center"
-                                       VerticalAlignment="Center"/>
+          FontSize="10"
+          FontWeight="Bold"
+          Foreground="{DynamicResource PrimaryTextBrush}"
+          HorizontalAlignment="Center"
+          VerticalAlignment="Center"/>
                         </Grid>
                         <Grid Grid.Column="0"
    Width="20" Height="20"
@@ -1032,7 +994,7 @@
                           Margin="0,8,0,0"/>
                             <!-- add your own toggles/sliders here -->
                             <TextBlock Text="Show Currency Pairs" FontWeight="SemiBold" Margin="0,8,0,4"/>
-                            <UniformGrid Columns="2" Margin="0,0,0,12">
+                            <UniformGrid Columns="2" Margin="0,0,0,12" DataContext="{x:Static prop:Settings.Default}">
                                 <CheckBox x:Name="AUDCheck" Content="AUD" IsChecked="{Binding ShowAUD,Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                                 <CheckBox x:Name="CADCheck" Content="CAD" IsChecked="{Binding ShowCAD,Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                                 <CheckBox x:Name="CHFCheck" Content="CHF" IsChecked="{Binding ShowCHF,Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
